--- a/Form.html
+++ b/Form.html
@@ -117,8 +117,8 @@
 
     /* Container for three divs */
     .div-container {
-      display: flex; /* Make the divs flex */
-      justify-content: space-around;
+      display: flex;
+      flex-direction: column; /* Make the divs vertically aligned */
       align-items: center;
       padding: 20px;
       background-color: #f4f4f4;
@@ -167,6 +167,7 @@
       font-size: 16px;
       border-radius: 5px;
       font-size: 12px;
+      margin-top: 10px; /* Add margin-top for spacing between buttons */
     }
 
     /* File input styles (hidden by default) */
