--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
     </header>
     <div class="container">
         <div class="image-container">
-            <img src="news1.png" alt="News Image 1">
-            <img src="news2.png" alt="News Image 2">
-            <img src="news3.png" alt="News Image 3">
+            <img src="news1.JPG" alt="News Image 1">
+            <img src="news2.JPG" alt="News Image 2">
+            <img src="news3.JPG" alt="News Image 3">
         </div>
         <p>Pretoria is in turmoil as a notorious scammer from Malawi spreads chaos, using fake documents to deceive innocent victims. Families and bikers alike are left in distress as the scammer swindles them and even threatens them at gunpoint before fleeing with their belongings.</p>
         <p>Now, the community is rallying together, determined to catch the elusive criminal and restore peace to the streets of Pretoria. With tensions running high and the city on edge, everyone is on high alert, hoping to put an end to the scammer's reign of terror.</p>
